--- a/index.html
+++ b/index.html
@@ -1,200 +1,140 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Página de Mateo 6-2</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: black;
-      color: #00ff00;
+      background: #000;
+      color: #1cff85;
       font-family: "Courier New", monospace;
+      text-align: center;
       overflow: hidden;
-      cursor: url('https://cur.cursors-4u.net/cursors/cur-2/cur116.cur'), auto;
     }
-
-    /* Loader */
-    #loader {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      z-index: 1000;
-    }
-
-    #loading-text {
-      font-size: 1.5rem;
-      color: #0f0;
-      white-space: pre-wrap;
-      text-align: center;
-      padding: 0 15px;
-    }
-
-    /* Contenido principal */
-    #content {
-      display: none;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 2rem;
-      font-weight: bold;
-      animation: rainbow 3s linear infinite;
-      margin-bottom: 20px;
-    }
-
-    @keyframes rainbow {
-      0% { color: red; }
-      14% { color: orange; }
-      28% { color: yellow; }
-      42% { color: green; }
-      57% { color: cyan; }
-      71% { color: blue; }
-      85% { color: violet; }
-      100% { color: red; }
-    }
-
-    button {
-      background: transparent;
-      color: #0f0;
-      border: 2px solid #0f0;
-      padding: 10px 20px;
-      font-size: 1.2rem;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-
-    button:hover {
-      background: #0f0;
-      color: black;
-    }
-
-    /* Matrix background effect */
-    canvas {
+    #matrix-bg {
       position: fixed;
       top: 0; left: 0;
-      width: 100%;
-      height: 100%;
+      width: 100vw; height: 100vh;
       z-index: -1;
+    }
+    .container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    h1 {
+      font-size: 2rem;
+      text-shadow: 0 0 10px #1cff85;
+      white-space: nowrap;
+      overflow: hidden;
+      border-right: 2px solid #1cff85;
+    }
+    .btn {
+      margin-top: 20px;
+      padding: 12px 24px;
+      font-size: 1rem;
+      font-weight: bold;
+      color: #eaffea;
+      background: transparent;
+      border: 2px solid #1cff85;
+      border-radius: 8px;
+      cursor: pointer;
+      text-decoration: none;
+      box-shadow: 0 0 10px #1cff85;
+      transition: all 0.2s ease-in-out;
+    }
+    .btn:hover {
+      background: #1cff85;
+      color: #000;
+      box-shadow: 0 0 20px #1cff85;
     }
   </style>
 </head>
 <body>
-  <canvas id="matrix"></canvas>
-
-  <!-- Loader -->
-  <div id="loader">
-    <div id="loading-text"></div>
+  <canvas id="matrix-bg"></canvas>
+  <div class="container">
+    <h1 id="typewriter"></h1>
+    <a href="video.mp4" download class="btn">⬇️ Descargar Video</a>
   </div>
-
-  <!-- Contenido principal -->
-  <div id="content">
-    <h1 id="titulo">Página de Mateo 6-2</h1>
-    <button onclick="playClick();alert('Aquí pondremos la descarga del video')">⬇ Descargar Video</button>
-  </div>
-
-  <!-- Sonido -->
-  <audio id="click-sound" src="https://www.soundjay.com/buttons/sounds/beep-07.mp3"></audio>
 
   <script>
-    // ---- Matrix Effect ----
-    const canvas = document.getElementById("matrix");
-    const ctx = canvas.getContext("2d");
-
+    // Fondo Matrix arcoíris
+    const canvas = document.getElementById('matrix-bg');
+    const ctx = canvas.getContext('2d');
     canvas.height = window.innerHeight;
     canvas.width = window.innerWidth;
 
-    const letters = "01";
-    const fontSize = 14;
+    const letters = '01アイウエオカキクケコｱｲｳｴｵｶｷｸｹｺ$#@*&%+~';
+    const lettersArr = letters.split('');
+    const fontSize = 18;
     const columns = canvas.width / fontSize;
-
     const drops = [];
-    for (let x = 0; x < columns; x++) drops[x] = 1;
 
-    let hue = 0; // color dinámico
+    for (let i = 0; i < columns; i++) {
+      drops[i] = 1;
+    }
 
-    function drawMatrix() {
-      ctx.fillStyle = "rgba(0, 0, 0, 0.08)";
+    function draw() {
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.08)';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
 
       ctx.font = fontSize + "px monospace";
 
-      hue = (hue + 2) % 360; // cambio de color progresivo
-      ctx.fillStyle = `hsl(${hue}, 100%, 50%)`;
-
       for (let i = 0; i < drops.length; i++) {
-        const text = letters.charAt(Math.floor(Math.random() * letters.length));
+        const text = lettersArr[Math.floor(Math.random() * lettersArr.length)];
+        ctx.fillStyle = `hsl(${Math.random() * 360}, 100%, 50%)`; // Colores cambiantes
         ctx.fillText(text, i * fontSize, drops[i] * fontSize);
 
-        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
+        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
+          drops[i] = 0;
+        }
         drops[i]++;
       }
     }
-    setInterval(drawMatrix, 30);
 
-    // ---- Loader frases ----
-    const frases = [
-      "Conectando con servidores seguros...",
-      "Iniciando protocolo de descifrado...",
-      "Accediendo a la base de datos secreta...",
-      "Estableciendo conexión encriptada...",
-      "Acceso autorizado ✔ Bienvenido Mateo."
-    ];
+    setInterval(draw, 25);
 
-    let fraseIndex = 0;
-    const loaderText = document.getElementById("loading-text");
+    window.addEventListener("resize", () => {
+      canvas.height = window.innerHeight;
+      canvas.width = window.innerWidth;
+    });
 
-    function escribirFrase(frase, i = 0, callback) {
-      if (i < frase.length) {
-        loaderText.innerHTML = frase.substring(0, i + 1);
-        setTimeout(() => escribirFrase(frase, i + 1, callback), 50);
+    // Efecto máquina de escribir con borrado
+    const typewriterElement = document.getElementById("typewriter");
+    const messages = ["El mejor grupo de la exposición", "Página de Mateo 6-2"];
+    let messageIndex = 0;
+    let charIndex = 0;
+    let deleting = false;
+
+    function typeEffect() {
+      const currentMessage = messages[messageIndex];
+
+      if (!deleting) {
+        typewriterElement.textContent = currentMessage.substring(0, charIndex + 1);
+        charIndex++;
+
+        if (charIndex === currentMessage.length) {
+          deleting = true;
+          setTimeout(typeEffect, 1500); // Pausa antes de borrar
+          return;
+        }
       } else {
-        setTimeout(callback, 1000);
+        typewriterElement.textContent = currentMessage.substring(0, charIndex - 1);
+        charIndex--;
+
+        if (charIndex === 0) {
+          deleting = false;
+          messageIndex = (messageIndex + 1) % messages.length;
+        }
       }
+      setTimeout(typeEffect, deleting ? 80 : 120);
     }
 
-    function cicloFrases() {
-      if (fraseIndex < frases.length) {
-        escribirFrase(frases[fraseIndex], 0, () => {
-          fraseIndex++;
-          cicloFrases();
-        });
-      } else {
-        document.getElementById("loader").style.display = "none";
-        document.getElementById("content").style.display = "flex";
-      }
-    }
-
-    cicloFrases();
-
-    // ---- Cambio automático del título ----
-    const titulo = document.getElementById("titulo");
-    const titulos = ["El mejor grupo de la exposición", "Página de Mateo 6-2"];
-    let indexTitulo = 0;
-
-    setInterval(() => {
-      indexTitulo = (indexTitulo + 1) % titulos.length;
-      titulo.textContent = titulos[indexTitulo];
-    }, 4000); // cambia cada 4 segundos
-
-    // ---- Sonido al click ----
-    function playClick() {
-      document.getElementById("click-sound").play();
-    }
+    typeEffect();
   </script>
 </body>
 </html>
