--- a/index.html
+++ b/index.html
@@ -1,68 +1,111 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página de Mateo 6-2</title>
   <style>
     body {
       margin: 0;
       background: #000;
-      color: #1cff85;
+      color: #00ff99;
       font-family: "Courier New", monospace;
-      text-align: center;
       overflow: hidden;
     }
+
+    /* Pantalla de carga */
+    #loading-screen {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      color: #00ff99;
+      font-size: 1.5rem;
+      z-index: 1000;
+      transition: opacity 1s ease;
+    }
+
+    #loading-text {
+      margin-top: 20px;
+      text-shadow: 0 0 10px #00ff99;
+    }
+
+    /* Canvas Matrix */
     #matrix-bg {
       position: fixed;
       top: 0; left: 0;
       width: 100vw; height: 100vh;
       z-index: -1;
     }
+
+    /* Contenido principal */
     .container {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      text-align: center;
+      color: #fff;
+      z-index: 10;
     }
+
     h1 {
       font-size: 2rem;
-      text-shadow: 0 0 10px #1cff85;
+      color: #00ff99;
+      text-shadow: 0 0 10px #00ff99;
       white-space: nowrap;
       overflow: hidden;
-      border-right: 2px solid #1cff85;
+      border-right: 2px solid #00ff99;
+      width: 0ch;
+      animation: typing 4s steps(30) infinite alternate, blink 0.7s infinite;
     }
-    .btn {
-      margin-top: 20px;
-      padding: 12px 24px;
-      font-size: 1rem;
-      font-weight: bold;
-      color: #eaffea;
-      background: transparent;
-      border: 2px solid #1cff85;
-      border-radius: 8px;
-      cursor: pointer;
-      text-decoration: none;
-      box-shadow: 0 0 10px #1cff85;
-      transition: all 0.2s ease-in-out;
+
+    @keyframes typing {
+      from { width: 0ch; }
+      to { width: 30ch; }
     }
-    .btn:hover {
-      background: #1cff85;
-      color: #000;
-      box-shadow: 0 0 20px #1cff85;
+    @keyframes blink {
+      50% { border-color: transparent; }
     }
   </style>
 </head>
 <body>
+  <!-- Pantalla de carga -->
+  <div id="loading-screen">
+    <div id="loading-text">Cargando... 0%</div>
+  </div>
+
+  <!-- Fondo Matrix -->
   <canvas id="matrix-bg"></canvas>
+
+  <!-- Contenido -->
   <div class="container">
     <h1 id="typewriter"></h1>
-    <a href="video.mp4" download class="btn">⬇️ Descargar Video</a>
   </div>
 
   <script>
-    // Fondo Matrix arcoíris
+    // --------- Loading Screen ----------
+    let load = 0;
+    const loadingText = document.getElementById("loading-text");
+    const loadingScreen = document.getElementById("loading-screen");
+
+    const fakeLoading = setInterval(() => {
+      load++;
+      loadingText.textContent = "Cargando... " + load + "%";
+
+      if (load >= 100) {
+        clearInterval(fakeLoading);
+        loadingScreen.style.opacity = "0";
+        setTimeout(() => { loadingScreen.style.display = "none"; }, 1000);
+      }
+    }, 40); // Velocidad de carga
+
+    // --------- Fondo Matrix ----------
     const canvas = document.getElementById('matrix-bg');
     const ctx = canvas.getContext('2d');
     canvas.height = window.innerHeight;
@@ -72,21 +115,19 @@
     const lettersArr = letters.split('');
     const fontSize = 18;
     const columns = canvas.width / fontSize;
-    const drops = [];
-
-    for (let i = 0; i < columns; i++) {
-      drops[i] = 1;
-    }
+    const drops = Array(Math.floor(columns)).fill(1);
 
     function draw() {
-      ctx.fillStyle = 'rgba(0, 0, 0, 0.08)';
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
 
+      // Colores hacker cambiantes
+      const colors = ['#00ff99', '#1cff85', '#00ffff', '#ff00ff'];
+      ctx.fillStyle = colors[Math.floor(Math.random() * colors.length)];
       ctx.font = fontSize + "px monospace";
 
       for (let i = 0; i < drops.length; i++) {
         const text = lettersArr[Math.floor(Math.random() * lettersArr.length)];
-        ctx.fillStyle = `hsl(${Math.random() * 360}, 100%, 50%)`; // Colores cambiantes
         ctx.fillText(text, i * fontSize, drops[i] * fontSize);
 
         if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
@@ -95,46 +136,39 @@
         drops[i]++;
       }
     }
+    setInterval(draw, 30); // velocidad Matrix
 
-    setInterval(draw, 25);
-
-    window.addEventListener("resize", () => {
-      canvas.height = window.innerHeight;
-      canvas.width = window.innerWidth;
-    });
-
-    // Efecto máquina de escribir con borrado
-    const typewriterElement = document.getElementById("typewriter");
-    const messages = ["El mejor grupo de la exposición", "Página de Mateo 6-2"];
-    let messageIndex = 0;
+    // --------- Typewriter Hacker ----------
+    const texts = ["El mejor grupo de la exposición", "Página de Mateo 6-2"];
+    let index = 0;
     let charIndex = 0;
+    let currentText = "";
     let deleting = false;
+    const typewriterEl = document.getElementById("typewriter");
 
-    function typeEffect() {
-      const currentMessage = messages[messageIndex];
+    function typeWriter() {
+      currentText = texts[index];
 
       if (!deleting) {
-        typewriterElement.textContent = currentMessage.substring(0, charIndex + 1);
+        typewriterEl.textContent = currentText.substring(0, charIndex + 1);
         charIndex++;
-
-        if (charIndex === currentMessage.length) {
+        if (charIndex === currentText.length) {
           deleting = true;
-          setTimeout(typeEffect, 1500); // Pausa antes de borrar
+          setTimeout(typeWriter, 2000); // pausa antes de borrar
           return;
         }
       } else {
-        typewriterElement.textContent = currentMessage.substring(0, charIndex - 1);
+        typewriterEl.textContent = currentText.substring(0, charIndex - 1);
         charIndex--;
-
         if (charIndex === 0) {
           deleting = false;
-          messageIndex = (messageIndex + 1) % messages.length;
+          index = (index + 1) % texts.length;
         }
       }
-      setTimeout(typeEffect, deleting ? 80 : 120);
+      setTimeout(typeWriter, deleting ? 60 : 100);
     }
 
-    typeEffect();
+    typeWriter();
   </script>
 </body>
 </html>
