--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
     <div id="loading-text">Cargando... 0%</div>
   </div>
 
+  <!-- Sonido hacker -->
+  <audio id="hacker-sound" autoplay loop>
+    <source src="https://www.soundjay.com/misc/sounds/beep-07.mp3" type="audio/mpeg">
+  </audio>
+
   <!-- Fondo Matrix -->
   <canvas id="matrix-bg"></canvas>
 
@@ -93,6 +98,7 @@
     let load = 0;
     const loadingText = document.getElementById("loading-text");
     const loadingScreen = document.getElementById("loading-screen");
+    const hackerSound = document.getElementById("hacker-sound");
 
     const fakeLoading = setInterval(() => {
       load++;
@@ -101,7 +107,10 @@
       if (load >= 100) {
         clearInterval(fakeLoading);
         loadingScreen.style.opacity = "0";
-        setTimeout(() => { loadingScreen.style.display = "none"; }, 1000);
+        setTimeout(() => { 
+          loadingScreen.style.display = "none"; 
+          hackerSound.pause(); // apaga el sonido al terminar
+        }, 1000);
       }
     }, 40); // Velocidad de carga
 
@@ -172,3 +181,4 @@
   </script>
 </body>
 </html>
+
