--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Página de Mateo 6-2</title>
   <style>
     body {
@@ -13,46 +13,41 @@
       text-align: center;
       overflow: hidden;
     }
-
-    /* Fondo Matrix */
     #matrix-bg {
       position: fixed;
       top: 0; left: 0;
       width: 100vw; height: 100vh;
       z-index: -1;
     }
-
-    /* Pantalla de carga */
-    #loading-screen {
+    .loading-screen {
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: black;
-      color: #1cff85;
+      background: #000;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
+      color: #1cff85;
       font-size: 1.5rem;
-      z-index: 9999;
+      z-index: 10;
     }
-
-    /* Contenido principal */
+    .hidden {
+      display: none;
+    }
     .container {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      z-index: 10;
+      z-index: 5;
       position: relative;
     }
-
     h1 {
       font-size: 2rem;
-      text-shadow: 0 0 15px #1cff85;
+      text-shadow: 0 0 10px #1cff85;
     }
-
     .btn {
       margin-top: 20px;
       padding: 12px 24px;
@@ -64,47 +59,47 @@
       border-radius: 8px;
       cursor: pointer;
       text-decoration: none;
-      box-shadow: 0 0 15px #1cff85;
+      box-shadow: 0 0 10px #1cff85;
       transition: all 0.2s ease-in-out;
     }
-
     .btn:hover {
       background: #1cff85;
       color: #000;
-      box-shadow: 0 0 25px #1cff85;
+      box-shadow: 0 0 20px #1cff85;
     }
-
-    /* Texto hacker animado */
-    .hacker-text {
+    #dynamicText {
       font-size: 2rem;
       color: #00ffea;
-      text-shadow: 0 0 10px #00fff2, 0 0 20px #00f7ff;
-      min-height: 2.5rem;
+      text-shadow: 0 0 15px #0ff;
+      white-space: nowrap;
+      border-right: 2px solid #0ff;
+      width: fit-content;
+      margin: 20px auto;
+      overflow: hidden;
     }
   </style>
 </head>
 <body>
-  <!-- Fondo Matrix -->
   <canvas id="matrix-bg"></canvas>
 
   <!-- Pantalla de carga -->
-  <div id="loading-screen">
-    <p id="loading-text">🔍 Buscando servidores...</p>
+  <div id="loading" class="loading-screen">
+    <p id="loadingText">🔍 Buscando servidores...</p>
   </div>
 
   <!-- Contenido principal -->
-  <div class="container" style="display:none;">
-    <h1 class="hacker-text" id="typewriter"></h1>
+  <div class="container hidden" id="mainContent">
+    <h1 id="dynamicText"></h1>
     <a href="video.mp4" download class="btn">⬇️ Descargar Video</a>
   </div>
 
-  <!-- Sonido teclado -->
-  <audio id="keyboard-sound" autoplay loop>
-    <source src="https://www.soundjay.com/mechanical/keyboard-1.mp3" type="audio/mpeg">
+  <!-- Sonido de teclado -->
+  <audio id="keyboardSound" loop autoplay>
+    <source src="https://www.fesliyanstudios.com/play-mp3/387" type="audio/mpeg">
   </audio>
 
   <script>
-    /* Fondo Matrix Animado */
+    // Fondo Matrix
     const canvas = document.getElementById('matrix-bg');
     const ctx = canvas.getContext('2d');
     canvas.height = window.innerHeight;
@@ -112,19 +107,20 @@
 
     const letters = '01アイウエオカキクケコｱｲｳｴｵｶｷｸｹｺ$#@*&%+~';
     const lettersArr = letters.split('');
+
     const fontSize = 18;
     const columns = canvas.width / fontSize;
     const drops = [];
-
     for (let i = 0; i < columns; i++) drops[i] = 1;
+
+    let colors = ["#1cff85", "#0ff", "#f0f", "#ff0"];
+    let colorIndex = 0;
 
     function draw() {
       ctx.fillStyle = 'rgba(0, 0, 0, 0.08)';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-      // Cambiar color dinámicamente
-      const colors = ["#1cff85", "#00fff2", "#ff00ff", "#ffea00"];
-      ctx.fillStyle = colors[Math.floor(Math.random() * colors.length)];
+      ctx.fillStyle = colors[colorIndex];
       ctx.font = fontSize + "px monospace";
 
       for (let i = 0; i < drops.length; i++) {
@@ -135,62 +131,50 @@
         drops[i]++;
       }
     }
-    setInterval(draw, 30);
 
+    setInterval(draw, 30);
+    setInterval(() => {
+      colorIndex = (colorIndex + 1) % colors.length;
+    }, 2000);
+
+    // Loading system
+    setTimeout(() => {
+      document.getElementById("loading").classList.add("hidden");
+      document.getElementById("mainContent").classList.remove("hidden");
+    }, 4000);
+
+    // Texto dinámico estilo typing hacker
+    const dynamicText = document.getElementById("dynamicText");
+    const texts = ["El mejor grupo de la exposición", "Página de Mateo 6-2"];
+    let textIndex = 0, charIndex = 0, deleting = false;
+
+    function typeEffect() {
+      const currentText = texts[textIndex];
+      if (!deleting) {
+        dynamicText.textContent = currentText.substring(0, charIndex + 1);
+        charIndex++;
+        if (charIndex === currentText.length) {
+          deleting = true;
+          setTimeout(typeEffect, 2000);
+          return;
+        }
+      } else {
+        dynamicText.textContent = currentText.substring(0, charIndex - 1);
+        charIndex--;
+        if (charIndex === 0) {
+          deleting = false;
+          textIndex = (textIndex + 1) % texts.length;
+        }
+      }
+      setTimeout(typeEffect, deleting ? 50 : 100);
+    }
+    setTimeout(typeEffect, 4200);
+
+    // Ajuste al redimensionar
     window.addEventListener("resize", () => {
       canvas.height = window.innerHeight;
       canvas.width = window.innerWidth;
     });
-
-    /* Pantalla de carga */
-    const frases = [
-      "🔍 Buscando servidores...",
-      "📡 Conectando a la red segura...",
-      "🔐 Acceso autorizado...",
-      "✅ Bienvenido a la Página de Mateo 6-2"
-    ];
-    let fraseIndex = 0;
-    const loadingText = document.getElementById("loading-text");
-
-    const interval = setInterval(() => {
-      loadingText.textContent = frases[fraseIndex];
-      fraseIndex++;
-      if (fraseIndex >= frases.length) {
-        clearInterval(interval);
-        document.getElementById("loading-screen").style.display = "none";
-        document.querySelector(".container").style.display = "flex";
-      }
-    }, 1500);
-
-    /* Texto hacker tipo máquina de escribir */
-    const hackerTexts = ["El mejor grupo de la exposición", "Página de Mateo 6-2"];
-    let tIndex = 0;
-    let charIndex = 0;
-    let deleting = false;
-    const speed = 100;
-    const typewriter = document.getElementById("typewriter");
-
-    function typeEffect() {
-      const currentText = hackerTexts[tIndex];
-      if (!deleting) {
-        typewriter.textContent = currentText.substring(0, charIndex + 1);
-        charIndex++;
-        if (charIndex === currentText.length) {
-          deleting = true;
-          setTimeout(typeEffect, 1200);
-          return;
-        }
-      } else {
-        typewriter.textContent = currentText.substring(0, charIndex - 1);
-        charIndex--;
-        if (charIndex === 0) {
-          deleting = false;
-          tIndex = (tIndex + 1) % hackerTexts.length;
-        }
-      }
-      setTimeout(typeEffect, speed);
-    }
-    setTimeout(typeEffect, 500);
   </script>
 </body>
 </html>
