--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Página de Mateo 6-2</title>
   <style>
@@ -19,34 +19,23 @@
       width: 100vw; height: 100vh;
       z-index: -1;
     }
-    .loading-screen {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: #000;
+    .loading, .container {
       display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      color: #1cff85;
-      font-size: 1.5rem;
-      z-index: 10;
-    }
-    .hidden {
-      display: none;
-    }
-    .container {
-      display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      z-index: 5;
-      position: relative;
+      flex-direction: column;
     }
     h1 {
       font-size: 2rem;
       text-shadow: 0 0 10px #1cff85;
+      white-space: nowrap;
+      overflow: hidden;
+      border-right: 3px solid #1cff85;
+      animation: blink 0.7s infinite step-end alternate;
+    }
+    @keyframes blink {
+      50% { border-color: transparent; }
     }
     .btn {
       margin-top: 20px;
@@ -67,39 +56,29 @@
       color: #000;
       box-shadow: 0 0 20px #1cff85;
     }
-    #dynamicText {
-      font-size: 2rem;
-      color: #00ffea;
-      text-shadow: 0 0 15px #0ff;
-      white-space: nowrap;
-      border-right: 2px solid #0ff;
-      width: fit-content;
-      margin: 20px auto;
-      overflow: hidden;
-    }
   </style>
 </head>
 <body>
   <canvas id="matrix-bg"></canvas>
 
   <!-- Pantalla de carga -->
-  <div id="loading" class="loading-screen">
-    <p id="loadingText">🔍 Buscando servidores...</p>
+  <div class="loading" id="loading-screen">
+    <h1 id="loading-text"></h1>
   </div>
 
   <!-- Contenido principal -->
-  <div class="container hidden" id="mainContent">
-    <h1 id="dynamicText"></h1>
+  <div class="container" id="main-content" style="display:none;">
+    <h1 id="main-text"></h1>
     <a href="video.mp4" download class="btn">⬇️ Descargar Video</a>
   </div>
 
-  <!-- Sonido de teclado -->
-  <audio id="keyboardSound" loop autoplay>
+  <!-- Sonido de tecleo -->
+  <audio id="typing-sound" loop>
     <source src="https://www.fesliyanstudios.com/play-mp3/387" type="audio/mpeg">
   </audio>
 
   <script>
-    // Fondo Matrix
+    // 🎥 Matrix de fondo
     const canvas = document.getElementById('matrix-bg');
     const ctx = canvas.getContext('2d');
     canvas.height = window.innerHeight;
@@ -107,74 +86,84 @@
 
     const letters = '01アイウエオカキクケコｱｲｳｴｵｶｷｸｹｺ$#@*&%+~';
     const lettersArr = letters.split('');
-
     const fontSize = 18;
     const columns = canvas.width / fontSize;
     const drops = [];
-    for (let i = 0; i < columns; i++) drops[i] = 1;
 
-    let colors = ["#1cff85", "#0ff", "#f0f", "#ff0"];
-    let colorIndex = 0;
+    for (let i = 0; i < columns; i++) {
+      drops[i] = 1;
+    }
 
+    let hue = 120;
     function draw() {
-      ctx.fillStyle = 'rgba(0, 0, 0, 0.08)';
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-      ctx.fillStyle = colors[colorIndex];
+      ctx.fillStyle = `hsl(${hue},100%,50%)`;
       ctx.font = fontSize + "px monospace";
 
       for (let i = 0; i < drops.length; i++) {
         const text = lettersArr[Math.floor(Math.random() * lettersArr.length)];
         ctx.fillText(text, i * fontSize, drops[i] * fontSize);
 
-        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
+        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
+          drops[i] = 0;
+        }
         drops[i]++;
       }
+      hue = (hue + 2) % 360;
     }
 
     setInterval(draw, 30);
-    setInterval(() => {
-      colorIndex = (colorIndex + 1) % colors.length;
-    }, 2000);
-
-    // Loading system
-    setTimeout(() => {
-      document.getElementById("loading").classList.add("hidden");
-      document.getElementById("mainContent").classList.remove("hidden");
-    }, 4000);
-
-    // Texto dinámico estilo typing hacker
-    const dynamicText = document.getElementById("dynamicText");
-    const texts = ["El mejor grupo de la exposición", "Página de Mateo 6-2"];
-    let textIndex = 0, charIndex = 0, deleting = false;
-
-    function typeEffect() {
-      const currentText = texts[textIndex];
-      if (!deleting) {
-        dynamicText.textContent = currentText.substring(0, charIndex + 1);
-        charIndex++;
-        if (charIndex === currentText.length) {
-          deleting = true;
-          setTimeout(typeEffect, 2000);
-          return;
-        }
-      } else {
-        dynamicText.textContent = currentText.substring(0, charIndex - 1);
-        charIndex--;
-        if (charIndex === 0) {
-          deleting = false;
-          textIndex = (textIndex + 1) % texts.length;
-        }
-      }
-      setTimeout(typeEffect, deleting ? 50 : 100);
-    }
-    setTimeout(typeEffect, 4200);
-
-    // Ajuste al redimensionar
     window.addEventListener("resize", () => {
       canvas.height = window.innerHeight;
       canvas.width = window.innerWidth;
     });
+
+    // 🎹 Sonido de tecleo
+    const typingSound = document.getElementById("typing-sound");
+
+    // 🔠 Efecto máquina de escribir
+    function typeWriterEffect(elementId, phrases, speed=100, delayBetween=1500, callback=null) {
+      let i = 0, j = 0, deleting = false;
+      const element = document.getElementById(elementId);
+
+      function type() {
+        if (!deleting) {
+          element.textContent = phrases[i].substring(0, j+1);
+          j++;
+          if (j === phrases[i].length) {
+            deleting = true;
+            setTimeout(type, delayBetween);
+            return;
+          }
+        } else {
+          element.textContent = phrases[i].substring(0, j-1);
+          j--;
+          if (j === 0) {
+            deleting = false;
+            i = (i+1) % phrases.length;
+          }
+        }
+        setTimeout(type, speed);
+      }
+      type();
+    }
+
+    // ⌛ Pantalla de carga con efecto tecleo
+    const loadingPhrases = ["Buscando servidores...", "Conectando a la red...", "Accediendo al sistema..."];
+    typeWriterEffect("loading-text", loadingPhrases, 80, 1000, () => {
+      // luego mostrar la página principal
+      document.getElementById("loading-screen").style.display = "none";
+      document.getElementById("main-content").style.display = "flex";
+    });
+
+    // ⌨️ Texto principal con efecto hacker
+    const mainPhrases = ["El mejor grupo de la exposición", "Página de Mateo 6-2"];
+    setTimeout(() => {
+      typingSound.play();
+      typeWriterEffect("main-text", mainPhrases, 90, 2000);
+    }, 5000); // después de la carga
   </script>
 </body>
 </html>
