--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Página de Mateo 6-2</title>
   <style>
@@ -19,26 +19,27 @@
       width: 100vw; height: 100vh;
       z-index: -1;
     }
-    .loading, .container {
+    .container {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      flex-direction: column;
     }
     h1 {
       font-size: 2rem;
-      text-shadow: 0 0 10px #1cff85;
+      text-shadow: 0 0 15px #1cff85;
       white-space: nowrap;
       overflow: hidden;
-      border-right: 3px solid #1cff85;
-      animation: blink 0.7s infinite step-end alternate;
+      border-right: 2px solid #1cff85;
+      display: inline-block;
+      animation: blink 0.7s infinite;
     }
     @keyframes blink {
       50% { border-color: transparent; }
     }
     .btn {
-      margin-top: 20px;
+      margin-top: 30px;
       padding: 12px 24px;
       font-size: 1rem;
       font-weight: bold;
@@ -48,37 +49,28 @@
       border-radius: 8px;
       cursor: pointer;
       text-decoration: none;
-      box-shadow: 0 0 10px #1cff85;
+      box-shadow: 0 0 15px #1cff85;
       transition: all 0.2s ease-in-out;
+      display: none; /* oculto hasta que cargue */
     }
     .btn:hover {
       background: #1cff85;
       color: #000;
-      box-shadow: 0 0 20px #1cff85;
+      box-shadow: 0 0 25px #1cff85;
     }
   </style>
 </head>
 <body>
   <canvas id="matrix-bg"></canvas>
-
-  <!-- Pantalla de carga -->
-  <div class="loading" id="loading-screen">
-    <h1 id="loading-text"></h1>
+  <div class="container">
+    <h1 id="title"></h1>
+    <a href="video.mp4" download class="btn" id="downloadBtn">⬇️ Descargar Video</a>
   </div>
 
-  <!-- Contenido principal -->
-  <div class="container" id="main-content" style="display:none;">
-    <h1 id="main-text"></h1>
-    <a href="video.mp4" download class="btn">⬇️ Descargar Video</a>
-  </div>
-
-  <!-- Sonido de tecleo -->
-  <audio id="typing-sound" loop>
-    <source src="https://www.fesliyanstudios.com/play-mp3/387" type="audio/mpeg">
-  </audio>
+  <audio id="type-sound" src="https://www.soundjay.com/mechanical/sounds/keyboard-1.mp3"></audio>
 
   <script>
-    // 🎥 Matrix de fondo
+    // ===== MATRIX DE COLORES =====
     const canvas = document.getElementById('matrix-bg');
     const ctx = canvas.getContext('2d');
     canvas.height = window.innerHeight;
@@ -86,84 +78,77 @@
 
     const letters = '01アイウエオカキクケコｱｲｳｴｵｶｷｸｹｺ$#@*&%+~';
     const lettersArr = letters.split('');
+
     const fontSize = 18;
     const columns = canvas.width / fontSize;
     const drops = [];
+    for (let i = 0; i < columns; i++) drops[i] = 1;
 
-    for (let i = 0; i < columns; i++) {
-      drops[i] = 1;
-    }
+    const colors = ["#1cff85", "#00f0ff", "#ff00ff", "#ff1c40"];
+    let colorIndex = 0;
 
-    let hue = 120;
-    function draw() {
-      ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+    function drawMatrix() {
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.1)';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-      ctx.fillStyle = `hsl(${hue},100%,50%)`;
+      ctx.fillStyle = colors[colorIndex];
       ctx.font = fontSize + "px monospace";
 
       for (let i = 0; i < drops.length; i++) {
         const text = lettersArr[Math.floor(Math.random() * lettersArr.length)];
         ctx.fillText(text, i * fontSize, drops[i] * fontSize);
-
-        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
-          drops[i] = 0;
-        }
+        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
         drops[i]++;
       }
-      hue = (hue + 2) % 360;
     }
+    setInterval(drawMatrix, 30);
+    setInterval(() => {
+      colorIndex = (colorIndex + 1) % colors.length;
+    }, 2000);
 
-    setInterval(draw, 30);
     window.addEventListener("resize", () => {
       canvas.height = window.innerHeight;
       canvas.width = window.innerWidth;
     });
 
-    // 🎹 Sonido de tecleo
-    const typingSound = document.getElementById("typing-sound");
+    // ===== EFECTO DE ESCRITURA =====
+    const titleEl = document.getElementById("title");
+    const typeSound = document.getElementById("type-sound");
 
-    // 🔠 Efecto máquina de escribir
-    function typeWriterEffect(elementId, phrases, speed=100, delayBetween=1500, callback=null) {
-      let i = 0, j = 0, deleting = false;
-      const element = document.getElementById(elementId);
+    let messages = ["Buscando servidor...", "El mejor grupo de la exposición", "Página de Mateo 6-2"];
+    let currentMsg = 0;
+    let charIndex = 0;
+    let deleting = false;
 
-      function type() {
-        if (!deleting) {
-          element.textContent = phrases[i].substring(0, j+1);
-          j++;
-          if (j === phrases[i].length) {
-            deleting = true;
-            setTimeout(type, delayBetween);
-            return;
-          }
-        } else {
-          element.textContent = phrases[i].substring(0, j-1);
-          j--;
-          if (j === 0) {
-            deleting = false;
-            i = (i+1) % phrases.length;
+    function typeEffect() {
+      let message = messages[currentMsg];
+      if (!deleting) {
+        titleEl.textContent = message.substring(0, charIndex + 1);
+        playTypeSound();
+        charIndex++;
+        if (charIndex === message.length) {
+          if (message === "Buscando servidor...") {
+            setTimeout(() => deleting = true, 1000);
+          } else {
+            setTimeout(() => deleting = true, 1500);
           }
         }
-        setTimeout(type, speed);
+      } else {
+        titleEl.textContent = message.substring(0, charIndex - 1);
+        charIndex--;
+        if (charIndex === 0) {
+          deleting = false;
+          currentMsg = (currentMsg + 1) % messages.length;
+          if (currentMsg === 1) document.getElementById("downloadBtn").style.display = "inline-block";
+        }
       }
-      type();
+    }
+    function playTypeSound() {
+      typeSound.currentTime = 0;
+      typeSound.play();
     }
 
-    // ⌛ Pantalla de carga con efecto tecleo
-    const loadingPhrases = ["Buscando servidores...", "Conectando a la red...", "Accediendo al sistema..."];
-    typeWriterEffect("loading-text", loadingPhrases, 80, 1000, () => {
-      // luego mostrar la página principal
-      document.getElementById("loading-screen").style.display = "none";
-      document.getElementById("main-content").style.display = "flex";
-    });
-
-    // ⌨️ Texto principal con efecto hacker
-    const mainPhrases = ["El mejor grupo de la exposición", "Página de Mateo 6-2"];
-    setTimeout(() => {
-      typingSound.play();
-      typeWriterEffect("main-text", mainPhrases, 90, 2000);
-    }, 5000); // después de la carga
+    setInterval(typeEffect, 100);
   </script>
 </body>
 </html>
