--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       background: #000;
       color: #1cff85;
-      font-family: "Courier New", monospace;
+      font-family: monospace;
       text-align: center;
       overflow: hidden;
     }
@@ -28,18 +28,10 @@
     }
     h1 {
       font-size: 2rem;
-      text-shadow: 0 0 15px #1cff85;
-      white-space: nowrap;
-      overflow: hidden;
-      border-right: 2px solid #1cff85;
-      display: inline-block;
-      animation: blink 0.7s infinite;
-    }
-    @keyframes blink {
-      50% { border-color: transparent; }
+      text-shadow: 0 0 10px #1cff85;
     }
     .btn {
-      margin-top: 30px;
+      margin-top: 20px;
       padding: 12px 24px;
       font-size: 1rem;
       font-weight: bold;
@@ -49,51 +41,68 @@
       border-radius: 8px;
       cursor: pointer;
       text-decoration: none;
-      box-shadow: 0 0 15px #1cff85;
+      box-shadow: 0 0 10px #1cff85;
       transition: all 0.2s ease-in-out;
-      display: none; /* oculto hasta que cargue */
     }
     .btn:hover {
       background: #1cff85;
       color: #000;
-      box-shadow: 0 0 25px #1cff85;
+      box-shadow: 0 0 20px #1cff85;
+    }
+
+    /* Mensaje de activar sonido */
+    #audio-message {
+      position: fixed;
+      top: 15px;
+      right: 15px;
+      background: rgba(0, 0, 0, 0.8);
+      border: 2px solid #1cff85;
+      padding: 10px 20px;
+      border-radius: 8px;
+      color: #1cff85;
+      font-family: monospace;
+      font-size: 14px;
+      cursor: pointer;
+      z-index: 1000;
+      box-shadow: 0 0 10px #1cff85;
+      animation: blink 1s infinite;
+    }
+    @keyframes blink {
+      50% { opacity: 0.5; }
     }
   </style>
 </head>
 <body>
   <canvas id="matrix-bg"></canvas>
+  
+  <div id="audio-message">🔊 Haz clic aquí para activar sonido</div>
+
   <div class="container">
-    <h1 id="title"></h1>
-    <a href="video.mp4" download class="btn" id="downloadBtn">⬇️ Descargar Video</a>
+    <h1 id="dynamic-text"></h1>
+    <a href="video.mp4" download class="btn">⬇️ Descargar Video</a>
   </div>
 
-  <audio id="type-sound" src="https://www.soundjay.com/mechanical/sounds/keyboard-1.mp3"></audio>
+  <audio id="keyboard-sound" loop>
+    <source src="https://www.soundjay.com/mechanical/keyboard-1.mp3" type="audio/mpeg">
+  </audio>
 
   <script>
-    // ===== MATRIX DE COLORES =====
+    // Fondo Matrix con colores
     const canvas = document.getElementById('matrix-bg');
     const ctx = canvas.getContext('2d');
     canvas.height = window.innerHeight;
     canvas.width = window.innerWidth;
-
     const letters = '01アイウエオカキクケコｱｲｳｴｵｶｷｸｹｺ$#@*&%+~';
     const lettersArr = letters.split('');
-
     const fontSize = 18;
     const columns = canvas.width / fontSize;
     const drops = [];
-    for (let i = 0; i < columns; i++) drops[i] = 1;
-
-    const colors = ["#1cff85", "#00f0ff", "#ff00ff", "#ff1c40"];
-    let colorIndex = 0;
-
-    function drawMatrix() {
-      ctx.fillStyle = 'rgba(0, 0, 0, 0.1)';
+    for (let i = 0; i < columns; i++) { drops[i] = 1; }
+    function draw() {
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-      ctx.fillStyle = colors[colorIndex];
+      ctx.fillStyle = `hsl(${Math.random() * 360}, 100%, 50%)`;
       ctx.font = fontSize + "px monospace";
-
       for (let i = 0; i < drops.length; i++) {
         const text = lettersArr[Math.floor(Math.random() * lettersArr.length)];
         ctx.fillText(text, i * fontSize, drops[i] * fontSize);
@@ -101,54 +110,39 @@
         drops[i]++;
       }
     }
-    setInterval(drawMatrix, 30);
-    setInterval(() => {
-      colorIndex = (colorIndex + 1) % colors.length;
-    }, 2000);
+    setInterval(draw, 30);
 
+    // Texto dinámico (escribe y borra)
+    const textElement = document.getElementById("dynamic-text");
+    const texts = ["Buscando servidores...", "El mejor grupo de la exposición", "Página de Mateo 6-2"];
+    let i = 0, j = 0, currentText = "", isDeleting = false;
+    function typeEffect() {
+      currentText = texts[i];
+      textElement.textContent = isDeleting ? currentText.substring(0, j--) : currentText.substring(0, j++);
+      if (!isDeleting && j === currentText.length) {
+        isDeleting = true; setTimeout(typeEffect, 1200);
+      } else if (isDeleting && j === 0) {
+        isDeleting = false; i = (i + 1) % texts.length; setTimeout(typeEffect, 300);
+      } else {
+        setTimeout(typeEffect, isDeleting ? 50 : 100);
+      }
+    }
+    typeEffect();
+
+    // Activar sonido al hacer clic
+    const audioMessage = document.getElementById("audio-message");
+    const keyboardSound = document.getElementById("keyboard-sound");
+
+    audioMessage.addEventListener("click", () => {
+      keyboardSound.play();
+      audioMessage.style.display = "none";
+    });
+
+    // Ajustar canvas en resize
     window.addEventListener("resize", () => {
       canvas.height = window.innerHeight;
       canvas.width = window.innerWidth;
     });
-
-    // ===== EFECTO DE ESCRITURA =====
-    const titleEl = document.getElementById("title");
-    const typeSound = document.getElementById("type-sound");
-
-    let messages = ["Buscando servidor...", "El mejor grupo de la exposición", "Página de Mateo 6-2"];
-    let currentMsg = 0;
-    let charIndex = 0;
-    let deleting = false;
-
-    function typeEffect() {
-      let message = messages[currentMsg];
-      if (!deleting) {
-        titleEl.textContent = message.substring(0, charIndex + 1);
-        playTypeSound();
-        charIndex++;
-        if (charIndex === message.length) {
-          if (message === "Buscando servidor...") {
-            setTimeout(() => deleting = true, 1000);
-          } else {
-            setTimeout(() => deleting = true, 1500);
-          }
-        }
-      } else {
-        titleEl.textContent = message.substring(0, charIndex - 1);
-        charIndex--;
-        if (charIndex === 0) {
-          deleting = false;
-          currentMsg = (currentMsg + 1) % messages.length;
-          if (currentMsg === 1) document.getElementById("downloadBtn").style.display = "inline-block";
-        }
-      }
-    }
-    function playTypeSound() {
-      typeSound.currentTime = 0;
-      typeSound.play();
-    }
-
-    setInterval(typeEffect, 100);
   </script>
 </body>
 </html>
